--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
         "test": "node t.js"
     },
     "dependencies": {
-        "@adiwajshing/baileys": "^3.3.2",
+        "@adiwajshing/baileys": "^3.4.1",
         "axios": "^0.21.1",
         "cheerio": "^1.0.0-rc.5",
         "child_process": "^1.0.2",
         "figlet": "^1.5.0",
+        "fluent-ffmpeg": "^2.1.2",
+        "fs-extra": "^9.0.1",
+        "gm": "^1.23.1",
         "got": "^11.8.1",
         "image-to-base64": "^2.1.1",
+        "mime-types": "^2.1.28",
         "moment": "^2.29.1",
         "moment-timezone": "^0.5.32",
         "node-fetch": "^2.6.1",
         "qrcode-terminal": "^0.12.0",
+        "request": "^2.88.2",
+        "sharp": "^0.27.0",
         "syntax-error": "^1.4.0",
         "urlencode": "^1.1.0"
     },
